--- a/Lawyers/css/style.css
+++ b/Lawyers/css/style.css
@@ -593,3 +593,355 @@ footer{
     color: var(--grey);
 }
 /* == || Footer == */
+
+
+
+/* == SERVICE PAGE == */
+section.service-bn{
+    width: 100%;
+    padding: 60px 0px 120px;
+    background-color: var(--background-color);
+}
+.service-bn-container{
+    width: 100%;
+    text-align: center;
+    position: relative;
+}
+.service-bn-container h1.title{
+    font-size: 72px;
+    font-weight: 600;
+    color: var(--white);
+    text-align: center;
+    margin: 0px 0px 30px;
+}
+.service-bn-container p{
+    font-size: 18px;
+    font-weight: 400;
+    color: var(--grey);
+    text-align: center;
+    margin: 0px 0px 20px;
+}
+.service-btn{
+    width: fit-content;
+    margin: 0px auto 30px;
+}
+.service-btn button{
+    height: 62px;
+    width: 220px;
+    margin: 10px 0px 0px;
+    font-size: 18px;
+    font-weight: 500;
+    color: var(--white);
+    text-align: center;
+    border: 0px;
+    border-radius: 10px;
+    background-color: var(--active-color);
+}
+.service-btn span{
+    font-size: 14px;
+    font-weight: 400;
+    color: var(--white);
+    text-align: center;
+    margin: 5px 0px;
+}
+.service-form{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin: auto;
+    width: fit-content;
+}
+.service-form .icon{
+    height: 46px;
+    width: 46px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-top: 2px solid var(--color);
+    border-left: 2px solid var(--color);
+    border-bottom: 2px solid var(--color);
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    background-color: var(--white);
+}
+.service-form form{
+    width: 100%;
+    min-width: 260px;
+    max-width: 340px;
+}
+.service-form form input{
+    height: 46px;
+    width: 100%;
+    border: 2px solid var(--color);
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    outline: none;
+    padding: 0px 10px;
+    font-size: 16px;
+    font-weight: 500;
+}
+.service-form form input:focus{
+    border: 2px solid var(--active-color);
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+.arrow-dwn{
+    padding: 10px 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    bottom: -90px;
+    left: 50%;
+}
+.arrow-dwn svg{
+    fill: #ffffff;
+}
+section.service-listings{
+    width: 100%;
+}
+.sv-lg-breadcrumb{
+    height: 45px;
+    border-bottom: 1.5px solid var(--color);
+}
+.sv-lg-bc-holder{
+    height: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+.sv-lg-bc-holder a svg{
+    fill: var(--color);
+}
+.sv-lg-bc-holder a,
+.sv-lg-bc-holder .s-name{
+    color: var(--color);
+    font-weight: 500;
+}
+.sv-lg-bc-holder a:hover svg,
+.sv-lg-bc-holder a:hover{
+    fill: var(--black);
+}
+.sv-lg-bc-holder span.icon{
+    height: 45px;
+    width: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.sv-lg-bc-holder span svg{
+    height: 100%;
+}
+
+.s-listings{
+    width: 100%;
+    background-color: #f9fafb;
+}
+.sv-lg-container{
+    padding: 20px 0px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}
+.side-lft{
+    width: 100%;
+    max-width: 310px;
+    min-width: 280px;
+    margin: 10px;
+}
+.side-lg-card{
+    margin: 10px 0px 0px;
+    text-align: center;
+    background-color: var(--white);
+    border-radius: 10px;
+    border: 1px solid #e5e7eb;
+    padding: 20px;
+}
+.side-lg-card .icon{
+    height: 48px;
+    width: 48px;
+    border-radius: 10px;
+    background-color: var(--active-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: -48px auto 0px;
+}
+.side-lg-card .icon svg{
+    fill: var(--white);
+}
+.side-lg-card .card-info h2{
+    font-size: 18px;
+    font-weight: 500;
+    color: var(--color);
+    text-align: center;
+    margin: 12px 0px 10px;
+}
+.side-lg-card .card-info p{
+    font-size: 16px;
+    font-weight: 400;
+    color: var(--color);
+    text-align: center;
+    margin: 6px 0px 10px;
+}
+.side-lg-card .icon-nd{
+    margin: 20px auto;
+}
+.side-lg-card .icon-nd svg{
+    fill: var(--active-color);
+}
+.side-lg-card button{
+    height: 42px;
+    width: 180px;
+    margin: 10px 0px 0px;
+    font-size: 18px;
+    font-weight: 500;
+    color: var(--white);
+    text-align: center;
+    border: 0px;
+    border-radius: 10px;
+    background-color: var(--active-color);
+}
+.side-lg-card span.btm{
+    font-size: 16px;
+    font-weight: 500;
+    color: var(--color);
+    text-align: center;
+    margin: 2px 0px;
+}
+
+.side-rgt{
+    margin: 10px;
+}
+.side-rgt-head h2{
+    font-size: 30px;
+    font-weight: 500;
+    color: var(--color);
+    text-align: left;
+}
+
+.side-rgt-cards{
+    width: 100%;
+    min-width: 280px;
+    max-width: 840px;
+}
+.side-rgt-card{
+    width: 100%;
+    max-width: 840px;
+    min-width: 280px;
+    padding: 0px;
+    border-radius: 10px;
+    background-color: var(--white);
+    margin: 20px 0px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    overflow: hidden;
+}
+.side-rgt-card .profile-info{
+    width: 100%;
+    min-width: 280px;
+    padding: 16px;
+}
+.p-top{
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between; 
+    border-bottom: 1px solid var(--grey);
+    padding: 10px 0px;
+}
+.p-top-left{
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start; 
+}
+.p-top-left .p-image{
+    width: 56px;
+    margin: 0px 20px 0px 0px;
+}
+.p-top-left .p-image img{
+    width: 100%;
+}
+.p-top-right p{
+    font-weight: 500;
+    width: 100%;
+}
+.p-top-right p span{
+    font-weight: 400 !important;
+}
+.p-btm{
+    width: 100%;
+    padding: 10px 0px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+.p-btm-left{
+    width: 100%;
+    max-width: 200px;
+}
+.p-btm-left p{
+    margin: 0px 0px 10px;
+}
+.p-btm-right{
+    width: 100%;
+    min-width: 280px;
+    max-width: 368px;
+}
+.p-tags{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-wrap: wrap ;
+}
+.p-tags span{
+    padding: 4px 10px;
+    background-color: var(--grey);
+    border-radius: 8px;
+    margin: 2px;
+}
+.side-rgt-card .profile-access{
+    height: 100%;
+    width: 100%;
+    min-width: 230px;
+    max-width: 240px;
+    padding: 20px;
+    background-color: #f3f4f6;
+}
+.side-rgt-card .profile-access button{
+    display: block;
+    margin: 5px 0px;
+    height: 48px;
+    width: 100%;
+    border: 0px;
+    text-align: left;
+    padding: 0px 12px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start; 
+    border-radius: 10px;
+    font-size: 14px;
+    font-weight: 500;
+}
+.side-rgt-card .profile-access button.btn-p-success-tp{
+    background-color: var(--active-color);
+    color: var(--white);
+}
+.side-rgt-card .profile-access button{
+    background-color: var(--white);
+    color: var(--active-color);
+}
+.side-rgt-card .profile-access button svg{
+    margin: 0px 10px 0px 0px;
+}
+.side-rgt-card .profile-access button svg.target{
+    margin: 0px 0px 0px 10px;
+}
+/* == || SERVICE PAGE == */
