--- a/Lawyers/css/style.css
+++ b/Lawyers/css/style.css
@@ -168,7 +168,7 @@ nav .links a:hover {
 }
 .drop-extra{
     min-width: 260px;
-    width: 100px;
+    width: 100%;
     margin: 10px;
 }
 /* Links inside the dropdown */
@@ -833,6 +833,7 @@ section.service-listings{
     max-width: 840px;
 }
 .side-rgt-card{
+    height: fit-content;
     width: 100%;
     max-width: 840px;
     min-width: 280px;
@@ -929,9 +930,9 @@ section.service-listings{
     margin: 2px;
 }
 .side-rgt-card .profile-access{
-    height: 100%;
     padding: 20px;
     background-color: #f3f4f6;
+    flex: 1;
 }
 .side-rgt-card .profile-access button{
     display: block;
